[package]
name = "solnetp2p"
version = "0.1.0"
edition = "2021"
authors = ["Sven Norman Esslinger <contact@esslinger.dev>"]
description = "SolNetP2P - Decentralized Peer-to-Peer Networking Protocol & Implementation"
license = "MIT"
repository = "https://github.com/digitaldesignerjazz/solnetp2p"
readme = "README.md"
keywords = ["p2p", "mesh", "networking", "decentralized", "privacy"]
categories = ["network-programming"]

[[bin]]
name = "solnetp2p-node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full", "tracing"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"